Fixed spacing for buttons on restaurant list.

--- a/src/app/onboarding-app/restaurant-list/restaurant-list.component.scss
+++ b/src/app/onboarding-app/restaurant-list/restaurant-list.component.scss
@@ -39,8 +39,8 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        button{
-          margin-left: 6px;
+        a{
+          margin-right: 6px;
         }
       }
       &:last-of-type{
